test/files/invalid/docstrings_include.stderr
error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_include.fbs:2:1
  │
2 │ /// Bad1
  │ ^^^^^^^^

error: Inner doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_include.fbs:3:1
  │
3 │ //! Bad2
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_include.fbs:4:1
  │
4 │ /// Bad3
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_include.fbs:5:9
  │
5 │ include /// Bad4
  │         ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_include.fbs:6:1
  │
6 │ /// Bad5
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_include.fbs:7:7
  │
7 │ "foo" /// Bad6
  │       ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_include.fbs:8:1
  │
8 │ /// Bad7
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_include.fbs:9:3
  │
9 │ ; /// Bad8
  │   ^^^^^^^^

error: Doc comments are not meaningful here.
   ┌─ test/files/invalid/docstrings_include.fbs:10:1
   │
10 │ /// Bad9
   │ ^^^^^^^^

error: Inner doc comments are not meaningful here.
   ┌─ test/files/invalid/docstrings_include.fbs:11:1
   │
11 │ //! Bad10
   │ ^^^^^^^^^

error: Could not read file "test/files/invalid/foo": No such file or directory (os error 2)
  ┌─ test/files/invalid/docstrings_include.fbs:7:1
  │
7 │ "foo" /// Bad6
  │ ^^^^^

